k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ttt.local
      http:
        paths:
          - path: /api/entries(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: entries-service
                port: { number: 4000 }
          - path: /api/integrations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: integrations-service
                port: { number: 4001 }
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ttt-frontend
                port: { number: 5173 }
